fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   font-family: "Poppins", sans-serif;
   padding-top: 10px;
   padding-bottom: 10px;
+  overflow: hidden;
 }
 
 .center{
